welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:6: error: value ==- is not a member of Int
      while (rep==-1){
                ^